public/styles.css
html,
body,
header,
.view {
  height: 100%;
  background-repeat: no-repeat;
  background-size: cover; 
  background-position: center;
  overscroll-behavior: none;
}

header {
  min-height: 700px;
}

@media (max-width: 100%) {
  html,
  body,
  header,
  .view {
    height: 100%;
  }
}

.full-width {
  width: 100%;
  position: absolute;
  left: 0;
}


.hr-light {
  border-top: 3px solid #fff;
  width: 80px;
}

/* Nav Bar CSS */
.top-nav-collapse {
  background-color: #202020 !important;
}

.navbar:not(.top-nav-collapse) {
  background: transparent !important;
}

@media (max-width: 991px) {
  .navbar:not(.top-nav-collapse) {
    background: #202020 !important;
  }
  .nav-font-styling {
    font-weight: 300 !important;
    font-size: 15px !important;
    padding-top: 0px !important;
  }
}

.nav-li-pad{
  padding-right: calc(2vw + 40px);
}

.v-mid {
  padding-top: 12.5px;
}

.nav-logo-pad {
  padding-right: 5px;
}

.nav-font-styling {
  font-weight: 600;
  font-size: 100%;
}

.navbar-nav .navbar-center {
  position: absolute;
  left: 50%;
  transform: translatex(-50%);
}

.navbar-no-shadow {
  box-shadow: none;
}

.navLogo {
  width:120px; 
  padding-top: 10px;
  padding-bottom: 10px;
  height: auto;
}


.navLogo:hover {
  opacity: 0.85;
}

/* Ending Nav Bar CSS */

/* Tags CSS */
h1, h2 {
  color:white;
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

li {
  color: white;
}
/* Ending Tags CSS */

/* Custom Header & Margin Styling CSS */
.h1-text {
  font-weight: 700;
  font-size: calc(290% + 2vw);
}

.h1-section {
  margin-top: 100px;
  margin-left: 10px;
}

.h1-team-section {
  padding-top: 70px;
  margin-left: 10px;
}

.h1-textDate {
  font-weight: 700;
  padding-bottom: 20px;
}

.dateStyling {
  font-size: calc(1vw + 100%);
  margin-top: 40px;
  text-align: center;
}

.locationFont {
  font-size: calc(1vw + 80%);
}

.schedule-styling {
  font-size: calc(190% + .70vw);
}

.h2-text {
  font-size: calc(100% + 1vw);
  font-weight: 700;
  color: white;
  /*word-wrap: break-word;*/
}

.h2-text-policy {
  font-size: calc(130% + 1vw) !important;
  font-weight: 700;
  color: white;
  /*word-wrap: break-word;*/
}

.h2-styling {
  margin-top: 100px;
  margin-left: 10px;
}

.aboutH2-styling {
  margin-left: 10px; 
  margin-bottom: 20px;
}

.reduce-m {
  margin-bottom: 20px !important;
}

.h2-nerc-board {
  margin-bottom: 100px;
  margin-left: 10px; 
  letter-spacing: 0px; 
  font-size: calc(90% + 2vw);
}

.h2-schedule-date {
  margin: 50px;
  margin-left: 10px;
  margin-top: 0px;
  font-size: calc(100% + 2vw);
}

.h2-policy {
  margin-left: 10px;
  margin-top: 30px;
  margin-bottom: 20px;
  font-size: calc(100% + 1.5vw);
}

.h2-registration {
  font-size: calc(100% + 1.5vw);
}

.h2-contact {
  font-size: calc(100% + 1.5vw);
  margin-top: 0px;
}

.h2-margin-top-extra {
  margin-top: 50px;
}

.no-margin-top {
  margin-top: -10px;
}

.h2-sponsor-type {
  margin: 50px;
  margin-left: 10px;
  margin-top: 0px;
  font-size: calc(100% + 2vw);
}
/* Ending Custom Header Styling CSS */

/* Paragraph CSS */
p {
  color: white;
}

.pStyling {
  font-size: 15px;
  margin-left: 10px;
  font-weight: 400;
}

.policyP {
  text-shadow: 0px 0px 1px black;
}
/* Ending Paragraph CSS */

/* Container & Grid CSS */
.container-width {
  min-width: 70%;
}

.container-fluid-BG-styling {
  background-position: center; 
  background-size:cover;
  background-repeat: no-repeat;
}

.grid-container {
  display: grid;
  grid-auto-rows: 150px;
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); 
  grid-gap: 0px;
  row-gap: 300px;
  column-gap: 10px;
  justify-content: center;
}

.grid-item {
  font-size: 30px;
  text-align: center;
  border-radius: 50px;
  width: 275px;
  margin-left: 20px;
}
/* Ending Container & Grid CSS */

/* Team Section CSS */
.ul-team {
  list-style-type: none; 
  margin: 0; 
  padding: 0;
}

.avatar-container {
  position: relative;
}

.avatar-img {
  border-radius: 50%; 
  width: 220px; 
  height: 220px;
}

.avatarBG {
  border-radius: 50%; 
  width: 220px; 
  height: 220px;
  background-color:white; 
  z-index: 2;
}
/* Ending Team Section CSS */

/* Row and Column CSS */
.last-row {
  padding-bottom: 100px;
}

.col-1-3 {
  width:300px;
  margin: 20px; 
  margin-left: 10px;
  margin-top: 0px;
}

.col-2-3 {
  width:1fr;
  margin: 20px; 
  margin-left: 10px; 
  margin-top: 0px;
}

.row-social-icons {
  justify-content: center;
  margin-top: 40px;
}
/* Ending Row & Column CSS */

/* Social Icon CSS */
.fa {
  padding: 10px;
  font-size: 30px;
  width: 50px;
  height: 50px;
  text-align: center;
  text-decoration: none;
  margin: 5px 2px;
  border-radius: 50%;
}

.fa:hover {
  opacity: 0.9;
  background-color: white;
}

.fa-facebook {
  background: #3B5998;
  color: white;
}
/* Ending Social Icon CSS */

.memberName {
  margin-top: 20px;
  font-weight: bold;
  font-size: 70%;
  text-shadow: 0 0 1.5px black;
}

.memberPosition {
  /*font-size: 50%;*/
  font-size: calc(50% + 0.4vw);
  text-shadow: 0 0 1.5px black;
}

.center {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
}

.register-button {
  background-color: #7DC243;
  border: none;
  color: white;
  /*padding: 25px 80px;*/
  text-align: center;
  text-decoration: none;
  /*display: inline-block;*/
  font-weight: 700;
  font-size: calc(60% + 1.25vw);
  padding: 5px;
  cursor: pointer;
}

.register-buttonBG {
  background-color: white;
  z-index: 1;
}

.register-button-height {
  /*padding: 8px 90px;*/
  font-size: calc(70% + 1.5vw);
  max-height: 60%;
}

.register-button:focus {
  outline:0;
}

.register-button:hover {
  opacity: .90;
}

/* The Modal (background) */
.modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 3; /* Sit on top */
  padding-top: 200px; /* Location of the box */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
}

/* Modal Content (image) */
.modal-content {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%) !important;
  margin: auto;
  display: block;
  width: 90%;
  max-width: 1041px;
  max-height: auto;
  background-color: black;
}

.contactlink :hover {
  color: #7DC242;
  background-color: transparent;
  text-decoration: underline;
}

